welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {reproMotif()}



def reproMotif(){
  var i = getMondeLargeur()
  for (j <- 0 to i-1){
    Motif
    gauche()
    avance()
    droite()
    avance()  
  }}
def Motif(){
  var j = getMondeLargeur()
  for (k <- 0 to j-1)
  setCouleurBrosse(T(j))
  brosse()
  avance()
}
  

def getMotif(){
  var i = getMondeHauteur()
  var T = new Array[Color](i)
  for (j <- 0 to i-1){
    T(j)=getCouleurSol()
    avance()
  }}
  

def brosse(){
  baisseBrosse()
  leveBrosse()
}